@@ -34,57 +34,6 @@ static void add_file_path (char *);
 static char * make_absolute (char * path);
 
 
-/* support for the -mno-cygwin switch copied from cygwin.h, cygwin2.c  */
-#ifndef CYGWIN_MINGW_SUBDIR
-#define CYGWIN_MINGW_SUBDIR "/mingw"
-#endif
-#define CYGWIN_MINGW_SUBDIR_LEN (sizeof (CYGWIN_MINGW_SUBDIR) - 1)
-
-char cygwin_d_phobos_dir[sizeof (D_PHOBOS_DIR) + 1
-        + (CYGWIN_MINGW_SUBDIR_LEN)] = D_PHOBOS_DIR;
-#undef D_PHOBOS_DIR
-#define D_PHOBOS_DIR (cygwin_d_phobos_dir)
-char cygwin_d_target_dir[sizeof (D_PHOBOS_TARGET_DIR) + 1
-        + (CYGWIN_MINGW_SUBDIR_LEN)] = D_PHOBOS_TARGET_DIR;
-#undef D_PHOBOS_TARGET_DIR
-#define D_PHOBOS_TARGET_DIR (cygwin_d_target_dir)
-
-static void
-maybe_fixup_phobos_target ()
-{
-#ifdef D_OS_VERSYM
-  char * env = getenv ("GCC_CYGWIN_MINGW");
-  char * p;
-  char ** av;
-
-  static char *d_cvt_to_mingw[] = {
-      cygwin_d_phobos_dir,
-      cygwin_d_target_dir,
-      NULL
-  };
-  if (!strcmp (D_OS_VERSYM, "Cygwin") && env && *env == '1')
-    {
-      for (av = d_cvt_to_mingw; *av; av++)
-	{
-	  int sawcygwin = 0;
-	  while ((p = strstr (*av, "-cygwin")))
-	    {
-	      char *over = p + sizeof ("-cygwin") - 1;
-	      memmove (over + 1, over, strlen (over));
-	      memcpy (p, "-mingw32", sizeof ("-mingw32") - 1);
-	      p = ++over;
-	      while (ISALNUM (*p))
-		p++;
-	      strcpy (over, p);
-	      sawcygwin = 1;
-	    }
-	  if (!sawcygwin && !strstr (*av, "mingw"))
-	    strcat (*av, CYGWIN_MINGW_SUBDIR);
-	}
-    }
-#endif
-}
-
 /* Read ENV_VAR for a PATH_SEPARATOR-separated list of file names; and
    append all the names to the import search path.  */
 
@@ -203,8 +152,6 @@ add_file_path (char * path)
 void
 register_import_chains ()
 {
-  maybe_fixup_phobos_target ();
-
   // %%TODO: front or back?
   if (std_inc)
     {
